prod/hello-world-service.yml
apiVersion: v1
kind: Service
metadata: 
  namespace: prod
  name: hello-world
spec: 
  selector: 
    app: hello-world
  ports: 
    - protocol: TCP
      port: 80
      targetPort: 80
